<resources>
    <string name="app_name">Install Wifi</string>

    <!-- Login -->
    <string name="sign_in">Masuk ke Akun\nAnda</string>
    <string name="sign_in_description">Masukkan email dan Password Anda untuk masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_click">Lupa Password ?</string>
    <string name="login">Log In</string>
    <string name="or">Atau</string>
    <string name="google_login">Lanjutkan dengan Google</string>
    <string name="doesnt_have_account">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>

    <!-- Register -->
    <string name="back_button">Tombol Kembali</string>
    <string name="sign_up_description">Buat akun untuk melanjutkan!</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="set_password">Set Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Sudah punya akun?</string>

    <!-- Forgot Password -->
    <string name="send_code">Kirim Kode</string>
    <string name="forgot_password_description">Masukkan email Anda untuk menerima kode\nverifikasi</string>
    <string name="enter_otp_code">Masukan Kode OTP</string>
    <string name="create_new_password">Buat Password Baru</string>
    <string name="new_password">Password Baru</string>
    <string name="set_new_password">Set Password Baru</string>
    <string name="otp_code">Kode OTP</string>

    <!-- Custom View -->
    <string name="empty_email_error">Email tidak boleh kosong</string>
    <string name="invalid_format_email">Format email tidak valid</string>
    <string name="password_valid">Password valid</string>
    <string name="password_cannot_be_blank">Password tidak boleh kosong</string>
    <string name="password_minimum_8_characters">Password minimal 8 karakter</string>
    <string name="password_must_contain_numbers">Password harus mengandung angka</string>
    <string name="password_must_contain_capital_letters">Password harus mengandung huruf kapital</string>
    <string name="password_must_be_at_least_8_characters_contain_numbers_and_capital_letters">Password harus minimal 8 karakter, mengandung angka dan huruf kapital</string>
    <string name="forgot_password">Lupa Password</string>

    <!-- Menu -->
    <string name="home_title">Beranda</string> <!-- was: title_home -->
    <string name="history_title">Riwayat</string> <!-- was: title_history -->
    <string name="package_title">Paket</string> <!-- was: title_package -->
    <string name="profile_title">Profile</string> <!-- was: title_profile -->

    <!-- Home -->
    <string name="banner_image">Banner Image</string>
    <string name="package_options">Pilihan Paket</string>
    <string name="see_all">Lihat Semua</string>
    <string name="promo">Promo</string>
    <string name="package_image">Gambar Paket</string>
    <string name="price">Rp %1$s</string>
    <string name="registration_successful">Register berhasil</string>
    <string name="login_email_successful">Login Email Berhasil</string>
    <string name="login_google_successful">Login Google Berhasil</string>

    <!-- Splash Screen -->
    <string name="splash_image">Image Splash</string> <!-- was: image_splash -->

    <!-- Onboarding -->
    <string name="onboarding_title_1">Selamat Datang di Install Wifi</string> <!-- was: title_menu_1 -->
    <string name="onboarding_desc_1">Cara mudah dan cepat untuk memesan pemasangan WiFi dari rumah Anda.</string> <!-- was: desc_menu_1 -->
    <string name="onboarding_title_2">Pilih Paket, Bayar, Beres!</string> <!-- was: title_menu_2 -->
    <string name="onboarding_desc_2">Pilih paket WiFi sesuai kebutuhan, lakukan pembayaran, dan kami akan atur jadwal pemasangan.</string> <!-- was: desc_menu_2 -->
    <string name="onboarding_title_3">Pantau Proses, Berikan Feedback</string> <!-- was: title_menu_3 -->
    <string name="onboarding_desc_3">Lihat jadwal teknisi, dapatkan konfirmasi, dan beri ulasan setelah pemasangan selesai.Lihat jadwal teknisi, dapatkan konfirmasi, dan beri ulasan setelah pemasangan selesai.</string> <!-- was: desc_menu_3 -->
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>

    <!-- Profile -->
    <string name="birth_date">Tanggal Lahir</string>
    <string name="user_name">Dias Dwi Gymnastyar</string> <!-- was: name -->
    <string name="user_gmail">diasdwig@gmail.com</string> <!-- was: gmail -->
    <string name="my_profile">Profile saya</string>
    <string name="settings">Pengaturan</string>
    <string name="notification">Notifikasi</string>
    <string name="allow">Izinkan</string>
    <string name="disallow">Tidak Izinkan</string>
    <string name="logout">Logout</string>

    <!-- Google -->
    <string name="default_web_client_id">821199049386-7r4m0b3rtn9m8ep39p4qj30a3c1ciepg.apps.googleusercontent.com</string>

    <!-- Form Fields -->
    <string name="field_name">Nama</string> <!-- was: text_name -->
    <string name="email_account">Akun Email</string>
    <string name="mobile_number">Nomor Handphone</string>
    <string name="my_mobile_number">Tambah Nomor</string>
    <string name="location">Lokasi</string>
    <string name="my_location">Kuningan</string>
    <string name="theme">Tema</string>
    <string name="light">Terang</string>
    <string name="dark">Gelap</string>
    <string name="system_theme">Tema Sistem</string>
    <string name="language">Bahasa</string>
    <string name="eng">Eng</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="package_name">Package Name</string>
    <string name="package_speed">%1$s Mbps</string>
    <string name="empty_history">Tidak ada riwayat terbaru</string>
    <string name="history_content">Konten Riwayat</string>
    <string name="history_time">Waktu Riwayat</string>
    <string name="package_detail">Detail Paket</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="package_description">Deskripsi Paket</string>
    <string name="package_terms_and_condition">Syarat dan Ketentuan</string>
    <string name="empty_package_list">Tidak ada paket yang tersedia</string>
    <string name="banner">Banner</string>
    <string name="banner_detail">Banner Detail</string>
    <string name="toggle_layout">Ubah Tampilan</string>
    <string name="edit">Edit</string>
    <string name="unlimited">Unlimited</string>
    <string name="purchase_details">Detail Pembelian</string>
    <string name="label_address">Alamat</string>
    <string name="specify_address">Tentukan Alamat</string>
    <string name="wifi">WiFi</string>
    <string name="total_payment">Total Bayar</string>
    <string name="ppn">PPN(11%)</string>
    <string name="installation">Pemasangan</string>
    <string name="discount">Diskon</string>
    <string name="total">Total</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="select_method">Pilih Metode</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="order_detail">Detail Pesanan</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="save">Simpan</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="add_location">Tambah lokasi</string>
    <string name="login_as_technician">Login sebagai Teknisi</string>
    <string name="register_as_technician">Register sebagai Teknisi</string>
    <string name="job_title">Tugas</string>
    <string name="app_name_technician">Install Wifi Teknisi</string>
    <string name="no_jobs_available">No jobs available</string>
    <string name="payment_status_desc">Payment Status</string>
    <string name="payment_success">Pembayaran Berhasil</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="finish">Selesai</string>
    <string name="payment_of_successfully_processed">Pembayaran sebesar %1$s berhasil diproses.</string>
    <string name="payment_of_failed_to_be_processed">Pembayaran sebesar %1$s gagal diproses.</string>
    <string name="payment_failed">Pembayaran Gagal</string>
    <string name="try_again">Coba Lagi</string>
    <string name="get_proof_of_payment_automatically">Ambil Bukti Pembayaran Otomatis</string>
    <string name="note">Harap Unggah Bukti Pembayaran dengan Menekan Tombol dibawah ini</string>
    <string name="payment_confirmation">Konfirmasi Pembayaran</string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="processing_payment">Proses Pembayaran</string>
    <string name="please_wait">Tunggu Sebentar</string>

</resources>

