<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dias.installwifi.view.menu.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_package"
        android:name="com.dias.installwifi.view.menu.packages.PackageFragment"
        android:label="@string/package_title"
        tools:layout="@layout/fragment_package" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.dias.installwifi.view.menu.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dias.installwifi.view.menu.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.dias.installwifi.view.menu.profile.EditProfileFragment"
        android:label="@string/edit_profile_title"
        tools:layout="@layout/fragment_edit_profile"/>

</navigation>