<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_package"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/package_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/paket_1" />

        <TextView
            android:id="@+id/tv_package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_name"
            app:layout_constraintStart_toEndOf="@id/iv_package"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_package_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_speed"
            app:layout_constraintStart_toEndOf="@id/iv_package"
            app:layout_constraintTop_toBottomOf="@id/tv_package_name" />

        <TextView
            android:id="@+id/tv_package_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/price"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_package"
            app:layout_constraintStart_toEndOf="@id/iv_package" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/arrow_forward"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="@id/tv_package_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_package_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>