<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_text_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/theme"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/state_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/light"
        android:textSize="@dimen/text_size_medium"
        android:drawablePadding="@dimen/padding_small"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_text_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/language"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_text_theme"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/state_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:text="@string/eng"
        android:textSize="@dimen/text_size_medium"
        android:drawablePadding="@dimen/padding_small"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        app:layout_constraintTop_toBottomOf="@id/state_theme"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>